--- a/tests/index.html
+++ b/tests/index.html
@@ -3,9 +3,24 @@
     <script src="../src/index.js"></script>
     <script>
         const es = new EventStream("https://ttv-live.herokuapp.com/streams/17845046-678f-11e9-96c5-8e04065ae5f4/subscribe/sse");
+
+        /* events:
+            - shot
+            - ballLoss
+            - substitution
+            - penaltyGiven
+            - goalCorrection
+            - startPeriod
+            - endPeriod
+            - startPossession
+            - endPossession
+         */
         es.on("shot", (attributes) => {
-          console.log("Shot", attributes);
-        })
+          if (attributes.result === "GOAL") {
+            console.log("Shot", attributes);
+          }
+        });
+
     </script>
 </head>
 </html>
