--- a/tests/polling.html
+++ b/tests/polling.html
@@ -1,9 +1,16 @@
 <html>
 <head>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../src/index.js"></script>
     <script>
       const es = new EventStream(
-        new PollingEventStreamSource("https://ttv-live.herokuapp.com/streams/9d4d3a52-91ca-11e9-a807-ce537ebf66e8/list")
+        // OA
+        new PollingEventStreamSource("http://ttv-live.herokuapp.com/streams/80224262-92d1-11e9-b5a6-ae41a34a6715/list")
+        //        new SSEEventStreamSource("http://ttv-live.herokuapp.com/streams/80224262-92d1-11e9-b5a6-ae41a34a6715/subscribe/sse")
+
+//        new PollingEventStreamSource("http://ttv-live.herokuapp.com/streams/0f38d5b4-9364-11e9-8f15-22ba1e42e51c/list")
+//        new SSEEventStreamSource("http://ttv-live.herokuapp.com/streams/0f38d5b4-9364-11e9-8f15-22ba1e42e51c/subscribe/sse")
+
       );
 
       /* events:
@@ -17,12 +24,109 @@
        - startPossession
        - endPossession
        */
-      es.on("shot", (attributes) => {
-        if (attributes.result === "GOAL") {
-          console.log("Shot", attributes);
+
+      class Team {
+        constructor(id, name) {
+          this.id = id;
+          this.name = name;
         }
+      }
+
+      class Stats {
+        constructor(homeTeam, awayTeam) {
+          this.homeTeam = homeTeam;
+          this.awayTeam = awayTeam;
+          this.goals = [];
+        }
+
+        addGoal(teamId, time, person, type) {
+            this.goals.push({teamId, time, person, type});
+        }
+
+        getLog() {
+            const teamMap = {
+                [this.homeTeam.id]: this.homeTeam,
+                [this.awayTeam.id]: this.awayTeam
+            };
+
+            const log = [];
+            const score = {home: 0, away: 0};
+
+            for(const {teamId, time, person} of this.goals) {
+                if (this.homeTeam.id === teamId) {
+                  score.home += 1;
+                } else {
+                  score.away += 1;
+                }
+                log.push({score: Object.assign({}, score), team: teamMap[teamId], time, person})
+            }
+            return log;
+        }
+      }
+      const debounce = (func, wait, immediate) => {
+        let timeout;
+        return function() {
+          const context = this, args = arguments;
+          const later = () => {
+            timeout = null;
+            if (!immediate) func.apply(context, args);
+          };
+          const callNow = immediate && !timeout;
+          clearTimeout(timeout);
+          timeout = setTimeout(later, wait);
+          if (callNow) func.apply(context, args);
+        };
+      };
+
+      const formatTime = function (sec) {
+        const sec_num = parseInt(sec, 10); // don't forget the second param
+        let hours   = Math.floor(sec_num / 3600);
+        let minutes = Math.floor((sec_num - (hours * 3600)) / 60);
+        let seconds = sec_num - (hours * 3600) - (minutes * 60);
+
+        if (hours   < 10) {hours   = "0"+hours;}
+        if (minutes < 10) {minutes = "0"+minutes;}
+        if (seconds < 10) {seconds = "0"+seconds;}
+        return hours+':'+minutes+':'+seconds;
+      };
+
+      const show = debounce((stats) => {
+        const log = stats.getLog();
+        let period_ = "1";
+        const rows = [];
+        rows.push("Start 1st period");
+        for(const {score, team, time: {time, period}, person} of log) {
+          if (period !== period_) {
+            period_ = period;
+            rows.push("Start 2nd period");
+          }
+          rows.push(`${score.home} - ${score.away} ${formatTime(time)} ${person.firstName} ${person.lastName} (${team.name})`);
+        }
+        $('#report').html(rows.join("<br />"));
+      }, 10);
+
+      // OA
+      const stats = new Stats(
+        new Team('c8fd34ae-c3cb-11e8-9a9e-6c4008b541b8', 'Oost-Arnhem 1'),
+        new Team('6cf00a4a-c6bf-47cb-a33e-831992a224f5', 'Mid Fryslan 1')
+      );
+
+      // RR
+//      const stats = new Stats(
+//        new Team('d2430e03-1084-4682-b988-f2bb76d92db2', 'RWA 1'),
+//        new Team('79a695e6-e070-11e8-8b7c-6c4008b541b8', 'Rust Roest 1')
+//      );
+
+      es.on("shot", ({time, person, result, type, possession: {teamId}}) => {
+        if (result === "GOAL") {
+          stats.addGoal(teamId, time, person, type);
+        }
+        show(stats);
       });
 
     </script>
 </head>
+<body>
+    <pre id="report"></pre>
+</body>
 </html>
